fix weird edge cases where text is off screen

--- a/packages/veritone-react-common/src/components/TranscriptEngineOutput/SpeakerTranscriptContent/styles.scss
+++ b/packages/veritone-react-common/src/components/TranscriptEngineOutput/SpeakerTranscriptContent/styles.scss
@@ -18,4 +18,8 @@
     -webkit-user-select: none;
     -o-user-select: none;
   }
+
+  .transcriptView:last-child {
+    padding-bottom: 40px;
+  }
 }
